<resources>
    <string name="app_name">CryptoApp</string>
    <string name="symbols_template">%s / %s</string>
    <string name="last_update_template">Last update time: %s</string>
    <string name="label_price">Price:</string>
    <string name="label_min_price">Min price:</string>
    <string name="label_max_price">Max price:</string>
    <string name="label_last_market">Last market:</string>
    <string name="label_last_update">Last update:</string>
</resources>