<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoinDetailActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textViewFromSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textColor="@android:color/holo_purple"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/textViewSlash"
        app:layout_constraintEnd_toStartOf="@id/textViewSlash"
        app:layout_constraintTop_toTopOf="@id/textViewSlash"
        tools:text="BTC" />

    <TextView
        android:id="@+id/textViewSlash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="/"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

    <TextView
        android:id="@+id/textViewToSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewSlash"
        app:layout_constraintStart_toEndOf="@id/textViewSlash"
        app:layout_constraintTop_toTopOf="@id/textViewSlash"
        tools:text="USD" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSlash">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewLabelPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="4dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/label_price" />

            <TextView
                android:id="@+id/textViewPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="4dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/textViewLabelPrice"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="52000.124" />

            <View
                style="@style/BorderStyle"
                app:layout_constraintBottom_toTopOf="@id/textViewMinPrice"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewPrice" />

            <TextView
                android:id="@+id/textViewLabelMinPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="4dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewPrice"
                android:text="@string/label_min_price" />

            <TextView
                android:id="@+id/textViewMinPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="4dp"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/textViewLabelMinPrice"
                app:layout_constraintTop_toBottomOf="@id/textViewPrice"
                tools:text="50210.124" />

            <View
                style="@style/BorderStyle"
                app:layout_constraintBottom_toTopOf="@id/textViewMaxPrice"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewMinPrice" />

            <TextView
                android:id="@+id/textViewLabelMaxPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="4dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewMinPrice"
                android:text="@string/label_max_price" />

            <TextView
                android:id="@+id/textViewMaxPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="4dp"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/textViewLabelMaxPrice"
                app:layout_constraintTop_toBottomOf="@id/textViewMinPrice"
                tools:text="55210.124" />

            <View
                style="@style/BorderStyle"
                app:layout_constraintBottom_toTopOf="@id/textViewLastMarket"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewMaxPrice" />

            <TextView
                android:id="@+id/textViewLabelLastMarket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="4dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewMaxPrice"
                android:text="@string/label_last_market" />

            <TextView
                android:id="@+id/textViewLastMarket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="4dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/textViewLabelLastMarket"
                app:layout_constraintTop_toBottomOf="@id/textViewMaxPrice"
                tools:text="Krasne city technologies" />

            <View
                style="@style/BorderStyle"
                app:layout_constraintBottom_toTopOf="@id/textViewLastUpdate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewLastMarket" />

            <TextView
                android:id="@+id/textViewLabelLastUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="4dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewLastMarket"
                android:text="@string/label_last_update" />

            <TextView
                android:id="@+id/textViewLastUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="4dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/textViewLabelLastUpdate"
                app:layout_constraintTop_toBottomOf="@id/textViewLastMarket"
                tools:text="19:17" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>